--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "private": true,
     "dependencies": {
         "@sap/cds": "^4",
-        "express": "^4",
-        "@sap/hana-client": "^2.4.177"
+        "@sap/cds-odata-v2-adapter-proxy": "^1.4.60",
+        "@sap/hana-client": "^2.4.177",
+        "express": "^4"
     },
     "devDependencies": {
         "sqlite3": "^5"
