--- a/app/iot/ui5-local.yaml
+++ b/app/iot/ui5-local.yaml
@@ -1,10 +1,10 @@
 specVersion: '2.0'
 metadata:
-  name: 'measures'
+  name: 'iot'
 type: application
 framework:
   name: SAPUI5
-  version: '1.85.0'
+  version: '1.85.1'
   libraries: 
     - name: sap.m
     - name: sap.ushell
