--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "cds": {
     "requires": {
       "db": {
-        "kind": "sqlite",
+        "kind": "sql",
         "model": "*"
       }
     }
