--- a/cf/router/xs-app.json
+++ b/cf/router/xs-app.json
@@ -1,5 +1,5 @@
 {
-    "welcomeFile": "/commarcmaurimeasures/",
+    "welcomeFile": "/commarcmauriappiot/",
     "authenticationMethod": "route",
     "routes": [
       {
