--- a/app/iot/package.json
+++ b/app/iot/package.json
@@ -24,14 +24,14 @@
         ]
     },
     "devDependencies": {
-        "rimraf": "3.0.0",
-        "@ui5/cli": "2.3.2",
-        "@ui5/fs": "2.0.1",
-        "@ui5/logger": "2.0.0",
+        "rimraf": "3.0.2",
+        "@ui5/cli": "2.14.13",
+        "@ui5/fs": "2.0.6",
+        "@ui5/logger": "2.0.1",
         "@sap/ux-specification": "latest",
-        "@sap/ux-ui5-tooling": "1",
-        "@sap/ui5-builder-webide-extension": "1.0.x",
-        "ui5-task-zipper": "^0.3.1"
+        "@sap/ux-ui5-tooling": "1.7.6",
+        "@sap/ui5-builder-webide-extension": "1.1.8",
+        "ui5-task-zipper": "^0.5.1"
     },
     "ui5": {
         "dependencies": [
