--- a/package.json
+++ b/package.json
@@ -13,17 +13,25 @@
     "moment": "^2.29.4"
   },
   "devDependencies": {
+    "@sap/ux-specification": "^1.102.10",
     "sqlite3": "^5.1.2"
   },
   "scripts": {
-    "start": "npx cds run"
+    "start": "npx cds run",
+    "undeploy": "cf undeploy esp32 --delete-services --delete-service-keys",
+    "watch-iotv4lr": "cds watch --open iotv4lr/webapp/index.html?sap-ui-xx-viewCache=false#fe-lrop-v4"
   },
   "cds": {
     "requires": {
       "db": {
-        "kind": "sql",
-        "model": "*"
+        "kind": "sqlite",
+        "credentials": {
+          "database": "sqlite.db"
+        }
       }
     }
-  }
+  },
+  "sapux": [
+    "app/iotv4lr"
+  ]
 }
